# talent-plan

./: .gitignore  NOTES.md  README.md
building-blocks/exercise-redis-ping/: Cargo.toml
building-blocks/exercise-redis-ping/src/: lib.rs  parser.rs
building-blocks/exercise-thread-pool/: Cargo.toml
building-blocks/exercise-thread-pool/src/: lib.rs
building-blocks/exercise_serde/: Cargo.toml
building-blocks/exercise_serde/src/: lib.rs
dss/: .gitignore  Cargo.toml  Makefile
dss/raft/: Cargo.toml
dss/raft/src/proto/: raft.proto
dss/raft/src/raft/: mod.rs  tests.rs
kvs/: .gitignore  Cargo.toml  download_tests.sh
kvs/benches/: engine_benchmarks.rs  kvs_benchmark.rs
kvs/src/: client.rs  cmd.rs  lib.rs  listener.rs  log_engine.rs  protocol.rs  server.rs  sled_engine.rs  thread_pool.rs
kvs/tests/: cli.rs  kv_store.rs  test.rs  thread_pool.rs
