[package]
name = "kvs"
version = "0.1.0"
authors = ["ivfranco <ivfranco33@protonmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[[bin]]
name = "kvs"
test = false
doctest = false

[[bin]]
name = "kvs-server"
test = false
doctest = false

[[bin]]
name = "kvs-client"
test = false
doctest = false

[[bench]]
name = "kvs_benchmark"
harness = false

[dev-dependencies]
assert_cmd = "1.0.3"
criterion = "0.3.4"
predicates = "1.0.7"
rand = { version = "^0.8", features = ["small_rng"] }
tempfile = "3.2.0"

[dependencies]
env_logger = "0.8.3"
log = "0.4.14"
pico-args = "0.4.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
sled = "0.34.6"
thiserror = "1.0.24"
