[package]
name = "kvs"
version = "0.1.0"
authors = ["ivfranco <ivfranco33@protonmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "kvs-server"
test = false
doctest = false

[[bin]]
name = "kvs-client"
test = false
doctest = false

[[bench]]
name = "engine_benchmarks"
harness = false

[dev-dependencies]
assert_cmd = "1.0.3"
criterion = "0.3.4"
crossbeam-utils = "0.8.3"
panic-control = "0.1.4"
predicates = "1.0.7"
rand = { version = "^0.8" }

[dependencies]
crossbeam-channel = "0.5.0"
dashmap = "4.0.2"
env_logger = "0.8.3"
futures = "0.3.13"
log = "0.4.14"
num_cpus = "1.13.0"
pico-args = "0.4.0"
rayon-core = "1.9.0"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
sled = "0.34.6"
thiserror = "1.0.24"
tempfile = "3.2.0"

[dependencies.tokio]
version = "1.3.0"
features = [
    "net",
    "rt",
    "macros",
    "rt-multi-thread",
    "time",
    "io-util"
]