[package]
name = "exercise_serde"
version = "0.1.0"
authors = ["ivfranco <ivfranco33@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.124"

[dev-dependencies]
tempfile = "3.2.0"
rand = "0.8.3"
serde_json = "1.0.64"
ron = "0.6.4"
# bson by default does not support [de]serialization of unsigned integers
bson = { version = "1.2.0", features = ["u2i"] }
